--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="form-group narrow-button">
       <button class="btn btn-primary" ng-click="narrow.get()">Narrow It Down For Me!</button>
     </div>
-    <div ng-if = "narrow.name==='' && narrow.flag===false"> <br><br><br> Not found </div>
+    <div ng-if = "( narrow.name==='' || narrow.found.length===0) && narrow.flag===false"> <br><br><br> Not found </div>
     <!-- found-items should be implemented as a component -->
     <div>
       <br><br><br><found-items ng-if="narrow.flag" found="narrow.found" on-remove="narrow.onRemove(index)"></found-items>
